--- a/22.html
+++ b/22.html
@@ -76,6 +76,6 @@
       </div>
     </div>
     <h1>FAQ</h1>
-    자주하는 질문이 없습니다.<br><a href="https://open.kakao.com/me/rcsfaq">카카오톡 오픈채팅으로 문의하기</a>
+    자주하는 질문이 없습니다.<br><a href="https://open.kakao.com/me/rcsbb">카카오톡 오픈채팅으로 문의하기</a>
   </body>
 </html>
