--- a/23.html
+++ b/23.html
@@ -77,7 +77,7 @@
     </div>
     <h1>후원처</h1>
     <h2>후원처: 154-12-356227 농협은행 조재민</h2>
-    <br>후원 인증 사진을 <a href="https://open.kakao.com/me/rcsbb">스박방연구회 공식 채팅</a>으로 보내주세요. 귀하의 성함이나 별칭이 후원자 명단에 기재됩니다.
+    <br><style="display:inline;">후원 인증 사진을 </style><style="display:inline;"><a href="https://open.kakao.com/me/rcsbb">스박방연구회 공식 채팅</a></style><style="display:inline;">으로 보내주세요. 귀하의 성함이나 별칭이 후원자 명단에 기재됩니다.</style>
     <br><h3>여러분의 소중한 후원금은 스트리머 방송의 질 상승을 위한 후원금 및 보조금으로 사용됩니다. <br>모든 사용 과정은 총무부 협의 하에 투명하게 공개되며, 사용 내역은 정보공개-후원금 이용내역 탭에서 확인하실 수 있습니다.</h3>
   </body>
 </html>
