--- a/211.html
+++ b/211.html
@@ -75,7 +75,7 @@
         <button type="button" onclick = "location.href = '24.html'">채용공고</button>
       </div>
     </div>
-    <h2>제목 : 박성준 응원댓글을 달아주세요</h2> <h3>글번호 : 1</h3>
+    <h2>제목 : 박성준 응원댓글을 달아주세요</h2> <h3>글번호 : 1</h3> <h4>게시일: 2021.11.16.</h4>
     <p>
       <div id="disqus_thread" style="width: 500px;"></div>
       <script>
@@ -97,5 +97,13 @@
       </script>
       <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     </p>
+    <div id="chos">
+      <div style="border: 1px solid #e7f4bd; padding: 10px; float:left; background-color: #e7f4bd;">▲다음글</div>
+      <div style="border: 1px solid #f4f4fb; padding: 10px; float:left; width:300px; background-color: #f4f4fb;"><a href="212.html">고등학교 수학 및 과학 과외 학생 모집</a></div>
+    </div>
+    <div id="chos" style="position: relative; top:5px;">
+      <div style="border: 1px solid #e7f4bd; padding: 10px; float:left; background-color: #e7f4bd;">▼이전글</div>
+      <div style="border: 1px solid #f4f4fb; padding: 10px; float:left; width:300px; background-color: #f4f4fb;">이전글이 없습니다.</div>
+    </div>
   </body>
 </html>
