--- a/24.html
+++ b/24.html
@@ -76,6 +76,6 @@
       </div>
     </div>
     <h1>채용공고</h1>
-    <a href="241.html">1 | 2022년도 스박방연구회 연구회원 공개채용 공고</a>
+    <a href="241.html">1 | 2022년도 스박방연구회 연구회원 공개채용 공고 | 2021.12.13.</a>
   </body>
 </html>
