--- a/241.html
+++ b/241.html
@@ -75,12 +75,20 @@
         <button type="button" onclick = "location.href = '24.html'">채용공고</button>
       </div>
     </div>
-    <h2>제목 : 2022년도 스박방연구회 연구회원 공개채용 공고</h2> <h3>글번호 : 1</h3>
+    <h2>제목 : 2022년도 스박방연구회 연구회원 공개채용 공고</h2> <h3>글번호 : 1</h3> <h4>게시일: 2021.12.13.</h4>
     2022년도 스박방연구회의 연구회원 공개채용을 공고합니다. 첨부파일을 확인하세요.
     <p><h4>다운로드</h4></p>
     <div style="position: relative; top: -30px;">
       <li><a href="2022년도+스박방연구회+연구회원+공개채용+공고문.hwp"><img src="save.png" width="20px">2022년도 스박방연구회 연구회원 공개채용 공고문</a></li>
       <li><a href="2022년도+스박방연구회+연구회원+공개채용+지원서.hwp"><img src="save.png" width="20px">2022년도 스박방연구회 연구회원 공개채용 지원서</a></li>
+    </div>
+    <div id="chos">
+      <div style="border: 1px solid #e7f4bd; padding: 10px; float:left; background-color: #e7f4bd;">▲다음글</div>
+      <div style="border: 1px solid #f4f4fb; padding: 10px; float:left; width:300px; background-color: #f4f4fb;">다음글이 없습니다.</div>
+    </div>
+    <div id="chos" style="position: relative; top:5px;">
+      <div style="border: 1px solid #e7f4bd; padding: 10px; float:left; background-color: #e7f4bd;">▼이전글</div>
+      <div style="border: 1px solid #f4f4fb; padding: 10px; float:left; width:300px; background-color: #f4f4fb;">이전글이 없습니다.</div>
     </div>
   </body>
 </html>
