--- a/21.html
+++ b/21.html
@@ -76,6 +76,7 @@
       </div>
     </div>
     <h1>공지사항</h1>
-    <a href="211.html">1 | 박성준 응원댓글을 달아주세요</a>
+    <a href="212.html">2 | 고등학교 수학 및 과학 과외 학생 모집 | 2021.12.15.</a>
+    <a href="211.html">1 | 박성준 응원댓글을 달아주세요 | 2021.11.16.</a>
   </body>
 </html>
