--- a/211.html
+++ b/211.html
@@ -98,7 +98,7 @@
       <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     </p>
     <div id="chos">
-      <div style="border: 1px solid #e7f4bd; padding: 10px; float:left; background-color: #e7f4bd;">▲다음글</div>
+      <div style="border: 1px solid #e7f4bd; padding: 10px; float:left; background-color: #e7f4bd;"><a href="212.html">▲다음글</a></div>
       <div style="border: 1px solid #f4f4fb; padding: 10px; float:left; width:300px; background-color: #f4f4fb;"><a href="212.html">고등학교 수학 및 과학 과외 학생 모집</a></div>
     </div>
     <div id="chos" style="position: relative; top:5px;">
