--- a/212.html
+++ b/212.html
@@ -90,7 +90,7 @@
       <div style="border: 1px solid #f4f4fb; padding: 10px; float:left; width:300px; background-color: #f4f4fb;">다음글이 없습니다.</div>
     </div>
     <div id="chos" style="position: relative; top:5px;">
-      <div style="border: 1px solid #e7f4bd; padding: 10px; float:left; background-color: #e7f4bd;">▼이전글</div>
+      <div style="border: 1px solid #e7f4bd; padding: 10px; float:left; background-color: #e7f4bd;"><a href="211.html">▼이전글</a></div>
       <div style="border: 1px solid #f4f4fb; padding: 10px; float:left; width:300px; background-color: #f4f4fb;"><a href="211.html">박성준 응원댓글을 달아주세요</a></div>
     </div>
     <p> <br> <br> <br></p>
