--- a/11.html
+++ b/11.html
@@ -67,7 +67,7 @@
       </ul>
     </nav>
     <br>
-    <div style="position: fixed; left: 30%; bottom: 10px;">
+    <div style="position: fixed; left: 30%; bottom: 10px; z-index:100;">
       <div id="btn_group">
         <button type="button" onclick = "location.href = '11.html'">인사말</button>
         <button type="button" onclick = "location.href = '12.html'" style="padding: 19.32px 26.77px;">연혁</button>
@@ -75,4 +75,4 @@
         <button type="button" onclick = "location.href = '14.html'" style="padding: 19.32px 32.97px;">CI</button>
       </div>
     </div>
-    <img src="me.png" style="position: relative; left: 10px; top: 10px; z-index: -20">
+    <img src="me.png" style="position: relative; left: 10px; top: 10px; z-index: -20;">
