--- a/241.html
+++ b/241.html
@@ -67,7 +67,7 @@
       </ul>
     </nav>
     <br>
-    <div style="position: fixed; left: 30%; bottom: 10px;">
+    <div style="position: fixed; left: 30%; bottom: 10px; z-index:100;">
       <div id="btn_group">
         <button type="button" onclick = "location.href = '21.html'">공지사항</button>
         <button type="button" onclick = "location.href = '22.html'" style="padding: 20.76px 33px;">FAQ</button>
@@ -78,7 +78,7 @@
     <h2>제목 : 2022년도 스박방연구회 연구회원 공개채용 공고</h2> <h3>글번호 : 1</h3> <h4>게시일: 2021.12.13.</h4>
     2022년도 스박방연구회의 연구회원 공개채용을 공고합니다. 첨부파일을 확인하세요.
     <p><h4>다운로드</h4></p>
-    <div style="position: relative; top: -30px;">
+    <div style="position: relative; top: -30px; z-index: -35;">
       <li><a href="2022년도+스박방연구회+연구회원+공개채용+공고문.hwp"><img src="save.png" width="20px">2022년도 스박방연구회 연구회원 공개채용 공고문</a></li>
       <li><a href="2022년도+스박방연구회+연구회원+공개채용+지원서.hwp"><img src="save.png" width="20px">2022년도 스박방연구회 연구회원 공개채용 지원서</a></li>
     </div>
