--- a/24.html
+++ b/24.html
@@ -67,7 +67,7 @@
       </ul>
     </nav>
     <br>
-    <div style="position: fixed; left: 30%; bottom: 10px;">
+    <div style="position: fixed; left: 30%; bottom: 10px; z-index:100;">
       <div id="btn_group">
         <button type="button" onclick = "location.href = '21.html'">공지사항</button>
         <button type="button" onclick = "location.href = '22.html'" style="padding: 20.76px 33px;">FAQ</button>
