--- a/55.html
+++ b/55.html
@@ -67,7 +67,7 @@
       </ul>
     </nav>
     <br>
-    <div style="position: fixed; left: 30%; bottom: 10px;">
+    <div style="position: fixed; left: 30%; bottom: 10px; z-index:100;">
       <div id="btn_group">
         <button type="button" onclick = "location.href = '51.html'">스트리밍</button>
         <button type="button" onclick = "location.href = '52.html'">대학입시</button>
