--- a/index.html
+++ b/index.html
@@ -57,5 +57,11 @@
     </nav>
     <br>
     <img src="박성준서버.png" width="100%">
+    <script langauge="javascript">
+      window.open("popup1.html", "채용", 'top=10, left=10, width=500, height=600, status=no, menubar=no, toolbar=no, resizable=no');
+    </script>
+    <script langauge="javascript">
+      window.open("popup2.html", "과외", 'top=10, left=520, width=500, height=600, status=no, menubar=no, toolbar=no, resizable=no');
+    </script>
   </body>
 </html>
