--- a/55.html
+++ b/55.html
@@ -58,7 +58,6 @@
         <li><a href="51.html">연구사업</a>
           <ul id="sub-menu">
             <li><a href="51.html" aria-label="subemnu">스트리밍ㅤ</a></li>
-            <li><a href="52.html" aria-label="subemnu">대학입시</a></li>
             <li><a href="53.html" aria-label="subemnu">이학</a></li>
             <li><a href="54.html" aria-label="subemnu">게임</a></li>
             <li><a href="55.html" aria-label="subemnu">복합</a></li>
@@ -70,13 +69,12 @@
     <div style="position: fixed; left: 30%; bottom: 10px; z-index:100;">
       <div id="btn_group">
         <button type="button" onclick = "location.href = '51.html'">스트리밍</button>
-        <button type="button" onclick = "location.href = '52.html'">대학입시</button>
         <button type="button" onclick = "location.href = '53.html'" style="padding: 20px 33.4px;">이학</button>
         <button type="button" onclick = "location.href = '54.html'" style="padding: 20px 33.4px;">게임</button>
         <button type="button" onclick = "location.href = '55.html'" style="padding: 20px 33.4px;">복합</button>
       </div>
     </div>
     <h1>복합 연구 소개</h1>
-    <h3>스트리밍과 대학입시, 이학, 게임 연구는 모두 박성준의 심신 안정에 기여하고 원활한 방송을 만드는데 그 목적을 둡니다.<br>4가지 주제는 독립적으로 발생하는 것이 아니라, 상호작용하며 연결되어있으므로, 우리는 그 관계를 파악하고 복합적인 연구와 지원을 수행합니다.</h3>
+    <h3>스트리밍과 이학, 게임 연구는 모두 박성준의 심신 안정에 기여하고 원활한 방송을 만드는데 그 목적을 둡니다.<br>3가지 주제는 독립적으로 발생하는 것이 아니라, 상호작용하며 연결되어있으므로, 우리는 그 관계를 파악하고 복합적인 연구와 지원을 수행합니다.</h3>
   </body>
 </html>
